# MSettings.app

./: .gitignore  Cargo.toml  README.md  WINDOWS_BUILD.md  app_icon.rc  build.rs  create_simple_ico.py  generate_ico.bat
scripts/: build.bat  build.sh
src/: main.rs
